ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "5"                   
    nginx.ingress.kubernetes.io/limit-key: "$binary_remote_addr$http_x_client_id"
    nginx.ingress.kubernetes.io/limit-burst: "5" 
    nginx.ingress.kubernetes.io/limit-req-status-code: "429"
    nginx.ingress.kubernetes.io/limit-conn-status-code: "429" 
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 8080
